# harbor

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: cloudflare-setup.md  code-signing.md
docs/superpowers/plans/: 2026-04-29-harbor-implementation.md
docs/superpowers/specs/: 2026-04-29-harbor-design.md  2026-05-01-auto-update-check-design.md
scripts/: build-signed-mac.mjs  bump-version.mjs  dev-scripts.test.mjs  fetch-runtimes.mjs  prepare-bundled-defaults.mjs  prepare-bundled-defaults.test.mjs  release-assets.mjs  release-assets.test.mjs  release-config.test.mjs  signing-env.mjs  signing-env.test.mjs  validate-changelog.mjs  verify-mac-signature.mjs  workflow-shape.test.mjs
src/: i18n.ts  main.ts  styles.css  ui.test.ts  ui.ts  update-checker.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: harbor-defaults.defaults.json
src-tauri/src/: config.rs  lib.rs  main.rs  runtime.rs
