[package]
name = "harbor"
version = "0.1.0"
description = "A small macOS exit-node app using Cloudflare Tunnel and VLESS."
edition = "2021"

[lib]
name = "harbor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
